# deltallm

./: .env.example  .gitignore  .readthedocs.yaml  .replit  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  KIMI.md  LICENSE  README.md  SECURITY.md  alembic.ini  config.example.yaml  config.yaml  coverage.xml  deltallm-0.1.15.tgz  deltallm-0.1.17.tgz  deltallm-0.1.18.tgz  deltallm-0.1.19.tgz  deltallm-0.1.20-rc1.tgz  deltallm-0.1.20-rc2.tgz  deltallm-0.1.20-rc3.tgz  deltallm-0.1.21-rc1.tgz  deltallm-0.1.21-rc2.tgz  deltallm-0.1.22.tgz  deltallm-0.1.23.tgz  deltallm-0.1.24-rc1.tgz  deltallm-0.1.24-rc2.tgz  deltallm-0.1.24.tgz  deltallm-0.1.25-rc1.tgz  deltallm-0.1.26-rc1.tgz  deltallm-0.1.26-rc2.tgz  dev_run.sh  docker-compose.yaml  index.html  index.yaml  mkdocs.yml  (+23 more)
.github/workflows/: ci.yml  release-images.yml
admin-dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
admin-dashboard/src/: App.tsx  index.css
artifacts/mockup-sandbox/: index.html  mockupPreviewPlugin.ts  package-lock.json  package.json  vite.config.ts
assets/: README.md
attached_assets/: Pasted--1-New-authentication-model-platform-users-Internal-log_1771458736854.txt  Pasted-Backend-Change-Summary-for-handoff-Refactored-admin-API_1771453388259.txt
config/: config.yaml  pricing.yaml
deltallm/: __init__.py  dynamic_router.py  exceptions.py  main.py  router.py
deltallm/batch/: __init__.py  processor.py
deltallm/budget/: __init__.py  enforcer.py  tracker.py
deltallm/cache/: __init__.py  base.py  memory.py  redis_cache.py
deltallm/callbacks/: __init__.py  base.py  logging_callback.py  spend_tracking_callback.py
deltallm/db/: __init__.py  base.py  models.py  seed_data.py  session.py
deltallm/guardrails/: __init__.py  filters.py  manager.py  policies.py
deltallm/pricing/: __init__.py  calculator.py  manager.py  models.py
deltallm/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  cohere.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py  registry.py  vllm.py
deltallm/proxy/: __init__.py  app.py  auth.py  config.py  dependencies.py  rate_limit.py  schemas.py  schemas_audio.py  schemas_batch.py  schemas_pricing.py  spend_tracking.py
deltallm/rbac/: __init__.py  audit.py  exceptions.py  manager.py  permissions.py
deltallm/types/: __init__.py  common.py  messages.py  requests.py  responses.py
deltallm/utils/: __init__.py  encryption.py  migrate_config.py  model_type_detector.py  pricing.py  token_counter.py  vision.py
docker/: .env.example  Dockerfile  docker-compose.yaml
docs/: API.md  ARCHITECTURE.md  README.md  architecture-refactor-todo.md  index.md  master-prd-outline.md  quickstart.md  rate-limit-hierarchy-todo.md  rbac-rollout-todo.md  requirements.txt
docs/admin-ui/: access-control.md  api-keys.md  audit-logs.md  batch-jobs.md  dashboard.md  guardrails.md  index.md  keys.md  mcp.md  model-groups.md  models.md  named-credentials.md  organizations.md  orgs-teams.md  people-and-access.md  prompt-registry.md  route-groups.md  settings.md  teams.md  usage.md
docs/api/: admin.md  health.md  index.md  mcp.md  proxy.md
docs/configuration/: general.md  index.md  models.md  router.md
docs/deployment/: batch-scheduler-rollout.md  docker.md  governance.md  index.md  kubernetes.md  prisma-migration-runbook.md  upstream-http.md
docs/features/: audit-log.md  authentication.md  batching.md  budgets.md  caching.md  grpc-transport.md  guardrails.md  index.md  mcp.md  observability.md  rate-limiting.md  routing.md
docs/getting-started/: docker.md  index.md  installation.md  mcp-quickstart.md  quickstart.md
docs/internal/: 20260413-batch-create-session-architecture-plan.md  20260413-batch-create-session-pr1-plan.md  20260413-batch-create-session-pr2-plan.md  20260413-batch-create-session-pr3-plan.md  20260413-batch-create-session-pr4-plan.md  20260413-batch-create-session-pr5-plan.md  (+28 more)
helm/: Chart.yaml  values-eval.yaml  values-production.yaml  values.schema.json  values.yaml
prisma/: schema.prisma
proxyllm/: .dockerignore  .env.example  .gitignore
scripts/: e2e_budget_threshold_notifications.sh  e2e_embeddings.sh  e2e_gateway_role_scenarios.sh  e2e_governance_matrix.sh  e2e_grpc_transport.sh  e2e_invitation_recovery.sh  e2e_mcp_governance.sh  measure_embedding_batch_load.py  start_backend.sh
src/: __init__.py  config.py  k8s_migration_state.py  main.py  prisma_bootstrap.py  rate_limit_policy.py  upstream_auth.py  upstream_http.py
tests/: __init__.py  conftest.py  test_admin_batch_create_sessions.py  test_admin_batch_repairs.py  test_audit_api.py  test_audit_api_authorization.py  test_audit_error_code.py  test_auth.py  test_auth_invitation_recovery.py  test_baseline_legacy_environment_script.py  test_batch_access.py  test_batch_advisory_locks.py  test_batch_backpressure.py  test_batch_cleanup.py  test_batch_completion_outbox.py  test_batch_create_admin_service.py  test_batch_create_promoter.py  test_batch_create_service.py  test_batch_create_session_cleanup.py  test_batch_create_session_repository.py  test_batch_create_session_scaffolding.py  test_batch_create_session_stager.py  test_batch_create_staging.py  test_batch_db_integration.py  test_batch_load_script.py  test_batch_metrics.py  test_batch_model_capacity.py  test_batch_models.py  test_batch_repository.py  test_batch_retry.py  test_batch_scheduler_backfill.py  test_batch_scheduler_rollout.py  test_batch_scheduling.py  test_batch_service.py  test_batch_stale_lease_sweeper.py  test_batch_storage.py  test_batch_worker.py  test_batch_worker_microbatch.py  test_billing.py  test_billing_alerts.py  (+64 more)
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+729 files in other folders)
