[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deltallm-core-api"
version = "0.1.0"
description = "DeltaLLM Phase 1 core proxy API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "PyYAML>=6.0,<7.0",
  "httpx>=0.26,<1.0",
  "redis>=5.0,<6.0",
  "prisma>=0.12,<1.0",
  "prometheus-client>=0.20,<1.0",
  "PyJWT[crypto]>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.2,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]
